# agent

./: .gitignore  AGENTSHARE.md  HEIST_MANIFEST.md  README.md  pyproject.toml
architecture/report/: 2026-05-27-browser-integration-implementation-report.md  2026-05-27-browser-integration-plan.md  2026-05-27-cli-config-profiles-implementation-report.md  2026-05-27-cli-config-profiles-plan.md  2026-05-27-config-writer-implementation-report.md  2026-05-27-config-writer-plan.md  2026-05-27-heist-manifest-research-report.md  2026-05-27-live-search-smoke-implementation-report.md  2026-05-27-live-search-smoke-plan.md  2026-05-27-llm-provider-integration-report.md  2026-05-27-p0-foundation-implementation-report.md  2026-05-27-p1-implementation-report.md  2026-05-27-p2-implementation-report.md  2026-05-27-p3-implementation-report.md  2026-05-27-phase1-api-cli-implementation-report.md  2026-05-27-phase1-api-cli-plan.md  2026-05-27-phase1-external-web-search-implementation-report.md  2026-05-27-phase1-external-web-search-plan.md  2026-05-27-phase1-http-cli-implementation-report.md  2026-05-27-phase1-http-cli-plan.md  2026-05-27-phase1-live-api-smoke-implementation-report.md  (+10 more)
docs/: HEIST_CREDITS.md  LAUNCH_POSTS.md  WHY_NOT_LANGGRAPH.md
examples/: 01_simple_research.py  02_parallel_dag.py  03_hitl_resume.py  local_runtime_demo.py
tests/: test_live_search_smoke.py  test_p0_foundation.py  test_p1_primitives.py  test_p2_primitives.py  test_p3_primitives.py  test_phase1_api_cli.py  test_phase1_live_api_smoke.py  test_runtime_integration.py  test_temporal_integration.py
(+71 files in other folders)
